--- a/perimeters/templates/view_perimeters.html
+++ b/perimeters/templates/view_perimeters.html
@@ -2,25 +2,70 @@
 
 {% load widget_tweaks %}
 
+{% block styles %}
+
+    <style type="text/css">
+        .floors-list li{
+            border-bottom: 1px solid whitesmoke;
+        }
+
+        .floors-list{
+            list-style: none;
+            margin-left: 0px !important;
+            padding-inline-start: 0px;
+            padding-bottom: 5px;
+            padding-top: 3px;
+
+        }
+    </style>
+    
+{% endblock styles %}
+
+
+
 
 {% block content %}
 
     <div class="container">
         <div class="row mt-3">
             <div class="col-sm-3 border-right">
-                <h5>{{perimeter.name}} Perimeter floors</h5>
-                <a href="/floors/create/{{perimeter.id}}">Create new</a>
-                <ul>
-                   {% for floor in floors %}
-                        <li>{{floor.name}}</li>
-                   {% endfor %}
-                </ul>
+                <a href="/patrol/view/{{perimeter.id}}" class="small"><i class="fa fa-search"></i> View perimeter patrols</a>
+                <h6>{{perimeter.name}} Perimeter floors</h6>
+                <div class="card">
+                    <div class="card-body">
+                        <p class="small">
+                            Floors distinguish points that are geometrically(Vertically on the same position)
+                        </p>
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-sm-12">
+                        <a class="float-right btn btn-sm btn-outline-warning mt-3" href="/floors/create/{{perimeter.id}}">Create new</a>
+
+                    </div>
+
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-12">
+                        <ul class="floors-list">
+                            {% for floor in floors %}
+                            <li>{{floor.name}}
+                                <p><a href="" class="small">delete</a> | <a href="" class="small">edit</a></p>
+                            </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
 
             </div>
             <div class="col-sm-9">
-                <h5>Perimeter checkpoints</h5>
+                <h5>Perimeter checkpoints <a class="btn btn-sm btn-outline-success ml-2 float-right" href="/perimeters/map_view/{{perimeter.id}}/"> <i class="fa fa-globe"></i> Map View</a>
+                    <a class="btn btn-sm btn-outline-primary ml-2 float-right" href="/perimeters/qr_view/{{perimeter.id}}/"><i class="fa fa-qrcode"></i> Qr codes</a>
+                    <a class="btn btn-sm btn-outline-warning float-right" href="/checkpoints/create/{{perimeter.id}}/">Create perimeter</a>
+                </h5>
 
-                <table class="table">
+                <table class="table mt-3 table-sm">
                     <thead>
                         <tr>
                             <th>Id</th>
@@ -30,7 +75,7 @@
                             <th>Action</th>
                         </tr>
                     </thead>
-                    <thead>
+                        <tbody class="small">
                         {% for checkpoint in checkpoints %}
 
                             <tr>
@@ -38,10 +83,13 @@
                                 <td>{{checkpoint.floor}}</td>
                                 <td>{{checkpoint.bar_code}}</td>
                                 <td>{{checkpoint.geo_location}}</td>
+                                <td>
+                                    <a href="" class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></a>
+                                </td>
                             </tr>
                             
                         {% endfor %}
-                    </thead>
+                    </tbody>
                 </table>
 
             </div>
