--- a/accounts/templates/home/home.html
+++ b/accounts/templates/home/home.html
@@ -36,7 +36,7 @@
       
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Logout</button>
+      <a href="{% url 'logout' %}" class="btn btn-outline-success my-2 my-sm-0" type="submit">Logout</a>
     </form>
   </div>
 </nav>
