--- a/patrol/templates/patrols_view.html
+++ b/patrol/templates/patrols_view.html
@@ -18,7 +18,37 @@
 
         <div class="col-sm-3 border-right">
             <h6>Patrol statistics</h6>
+            <table class="table small">
+                <tr>
+                    <th>Perimeter:</th>
+                    <td>{{patrol.perimeter.name}}</td>
+                </tr>
+
+                <tr>
+                    <th>Check points:</th>
+                    <td>{{patrol.perimeter.perimeter_checkpoints.count}}</td>
+                </tr>
+
+                <tr>
+                    <th>Patrol points:</th>
+                    <td>{{patrol.patrolpoints.count}}</td>
+                </tr>
+            </table>
             
+            <button class="btn btn-outline-primary btn-sm btn-block" onclick="loadPatrolPoints()">Show patrolled points</button>
+
+            <h6 class="mt-3">Floor layers</h6>
+            <div class="row">
+                <div class="col-sm-12">
+                    <ul class="floors-list">
+                        {% for floor in patrol.perimeter.floors.all %}
+                        <li>{{floor.name}}
+                            <p><a href="" class="small">Show patrol points layers</a></p>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
 
 
         </div>
@@ -41,10 +71,52 @@
 
     <script type="text/javascript">
         window.map = null
-        window.peri_path=null
+        window.window.patrol_path=null
 
         function initMap() {
             window.map = new google.maps.Map(document.getElementById('map'), {zoom: 15});
+        }
+
+
+        /*
+        create function to load all the patrolled points into the view
+        */
+        function loadPatrolPoints(){
+            let url = '/patrol/patrol_points/{{patrol.id}}'
+            let path=[]
+            if(window.patrol_path!=null)window.patrol_path.setMap(null)
+
+            axios.get(url)
+                .then(res=>{
+                    $.each(res.data.patrolpoint_list,function(key,patrol_point){
+
+                        if(patrol_point.checkpoint!=null){
+                            let point={lat:patrol_point.checkpoint.location[0],lng:patrol_point.checkpoint.location[1]}
+                            path.push(point)
+                        }
+
+                    })
+
+
+
+                    window.patrol_path = new google.maps.Polyline({
+                        path: path,
+                        geodesic: true,
+                        strokeColor: '#FF0000',
+                        strokeOpacity: 1.0,
+                        strokeWeight: 2
+                    });
+
+
+                    window.patrol_path.setMap(window.map)
+                    var first_location=new google.maps.LatLng(path[0])
+                    window.map.setCenter(first_location)
+
+
+                })
+
+
+
         }
     </script>
 
